--- a/index.html
+++ b/index.html
@@ -144,10 +144,9 @@
 			<div class="filters">
 				<ul>
 					<li class="active" data-filter="*">All</li>
-					<li data-filter=".packaging">Packaging</li>
-					<li data-filter=".mockup">Mockup</li>
-					<li data-filter=".typography">Typography</li>
-					<li data-filter=".photography">Photography</li>
+					<li data-filter=".packaging">Personal</li>
+					<li data-filter=".mockup">Poster</li>
+					<li data-filter=".typography">Apparel</li>
 				</ul>
 			</div>
 
